Fix unclosed div

--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -6,7 +6,7 @@
                     <div ng-switch on="exercise.type">
 
                         <div ng-switch-when="reps">
-                            <div ng-include src="'templates/reps.html'"></div
+                            <div ng-include src="'templates/reps.html'"></div>
                         </div>
 
                         <div ng-switch-when="hold">
