Add settings page

--- a/www/templates/hold.html
+++ b/www/templates/hold.html
@@ -1,5 +1,5 @@
 <div class="card">
-    <div class="item item-divider">
+    <div class="item item-divider bar-calm">
         <h3>{{exercise.name}}</h3>
     </div>
     <div class="item item-text-wrap">
