--- a/www/templates/tab-routine.html
+++ b/www/templates/tab-routine.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Dashboard">
+<ion-view view-title="Routine">
     <ion-content>
             <ion-slide-box on-slide-changed="slideChanged($index)" show-pager="false">
                 <ion-slide ng-repeat="exercise in routine track by $index">
