--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -6,8 +6,8 @@ navigation history that also transitions its views in and out.
 <ion-tabs class="tabs-icon-top tabs-color-active-positive">
 
   <!-- Dashboard Tab -->
-  <ion-tab title="Dash" icon-off="ion-ios-pulse" icon-on="ion-ios-pulse-strong" href="#/tab/dash">
-    <ion-nav-view name="tab-dash"></ion-nav-view>
+  <ion-tab title="Routine" icon-off="fa fa-heart" icon-on="fa fa-heart" href="#/tab/routing">
+    <ion-nav-view name="tab-routine"></ion-nav-view>
   </ion-tab>
 
   <!-- Settings Tab -->
