--- a/www/templates/done.html
+++ b/www/templates/done.html
@@ -1,5 +1,5 @@
 <div class="card">
-    <div class="item item-divider">
+    <div class="item item-divider bar-calm">
         <h1>Done</h1>
     </div>
     <div class="item item-text-wrap">
