--- a/www/templates/rest.html
+++ b/www/templates/rest.html
@@ -4,8 +4,7 @@
     </div>
     <div class="item item-text-wrap">
         <div class="row">
-
-            <div class="col clock-holder">
+            <div class="col clock-holder" id="timer-{{exercise.index}}">
                 <h1>
                     <timer countdown="exercise.seconds" autostart="false" interval="1000">
                         {{mminutes}}:{{sseconds}}
@@ -15,7 +14,7 @@
         </div>
         <div class="row">
             <div class="col">
-                <button ng-click="startTimer()" class="button button-block button-balanced">Start</button>
+                <button ng-click="startTimer({{exercise.index}})" class="button button-block button-balanced">Start</button>
             </div>
             <div class="col">
                 <button ng-click="stopTimer()" class="button button-block button-assertive">Stop</button>
