Add ability to change levels of exercise

--- a/www/templates/rest.html
+++ b/www/templates/rest.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card rest">
     <div class="item item-divider">
         <h3>{{exercise.name}}</h3>
     </div>
@@ -10,7 +10,7 @@
                         {{mminutes}}:{{sseconds}}
                     </timer>
                 </h1>
-            </div>
+            </div>`
         </div>
         <div class="row">
             <div class="col">
