--- a/www/templates/tab-routine.html
+++ b/www/templates/tab-routine.html
@@ -1,27 +1,27 @@
 <ion-view view-title="Routine">
     <ion-content>
-            <ion-slide-box on-slide-changed="slideChanged($index)" show-pager="false">
-                <ion-slide ng-repeat="exercise in routine track by $index">
-                    <div ng-switch on="exercise.type">
+        <ion-slide-box on-slide-changed="slideChanged($index)" show-pager="false">
+            <ion-slide ng-repeat="exercise in routine track by $index | filter: { enabled: true } ">
+                <div ng-switch on="exercise.type">
 
-                        <div ng-switch-when="reps">
-                            <div ng-include src="'templates/reps.html'"></div>
-                        </div>
-
-                        <div ng-switch-when="hold">
-                            <div ng-include src="'templates/hold.html'"></div>
-                        </div>
-
-                        <div ng-switch-when="rest">
-                            <div ng-include src="'templates/rest.html'"></div>
-                        </div>
-
-                        <div ng-switch-when="done">
-                            <div ng-include src="'templates/done.html'"></div>
-                        </div>
-
+                    <div ng-switch-when="reps">
+                        <div ng-include src="'templates/reps.html'"></div>
                     </div>
-                </ion-slide>
-            </ion-slide-box>
+
+                    <div ng-switch-when="hold">
+                        <div ng-include src="'templates/hold.html'"></div>
+                    </div>
+
+                    <div ng-switch-when="rest">
+                        <div ng-include src="'templates/rest.html'"></div>
+                    </div>
+
+                    <div ng-switch-when="done">
+                        <div ng-include src="'templates/done.html'"></div>
+                    </div>
+
+                </div>
+            </ion-slide>
+        </ion-slide-box>
     </ion-content>
 </ion-view>
