--- a/www/templates/rest.html
+++ b/www/templates/rest.html
@@ -1,6 +1,6 @@
 <div class="card rest">
     <div class="item item-divider">
-        <h3>{{exercise.name}}</h3>
+        <h3 class="exercise-name">{{exercise.name}}</h3>
     </div>
     <div class="item item-text-wrap">
         <div class="row">
