--- a/www/templates/tab-exercisesettings.html
+++ b/www/templates/tab-exercisesettings.html
@@ -1,4 +1,4 @@
-<ion-view view-title="{{exercise.name}} Settings">
+<ion-view view-title="{{exercise.name}} Settings" hide-back-button="false">
     <ion-content>
         <ul class="list">
             <li class="item item-checkbox">
