--- a/www/templates/tab-settings.html
+++ b/www/templates/tab-settings.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Settings">
+<ion-view view-title="Settings" hide-back-button="false">
     <ion-content>
         <h3>Global settings</h3>
         <ul class="list">
