--- a/www/templates/reps.html
+++ b/www/templates/reps.html
@@ -1,6 +1,7 @@
 <div class="card">
     <div class="item item-divider">
-        <h3>{{exercise.name}}</h3>
+        <a class="button button-icon icon ion-gear-a right" href="#/tab/settings/exercise/{{exercise.name}}"></a>
+        <h3 class="exercise-name">{{exercise.name}}</h3>
     </div>
     <div class="item item-text-wrap">
         <div class="row">
