--- a/www/templates/tab-routine.html
+++ b/www/templates/tab-routine.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Routine">
     <ion-content>
         <ion-slide-box on-slide-changed="slideChanged($index)" show-pager="false">
-            <ion-slide ng-repeat="exercise in routine track by $index | filter: { enabled: true } ">
+            <ion-slide ng-repeat="exercise in routine track by $index ">
                 <div ng-switch on="exercise.type">
 
                     <div ng-switch-when="reps">
