--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -16,7 +16,7 @@ navigation history that also transitions its views in and out.
     </ion-tab>
 
     <ion-tab title="Exercise Settings" href="#/tab/exercise-settings" hidden="true">
-        <ion-nav-view name="tab-exercise-settings"></ion-nav-view>
+        <ion-nav-view name="tab-exercise-settings" hide-back-button="false"></ion-nav-view>
     </ion-tab>
 
 </ion-tabs>
