--- a/www/templates/tab-exercisesettings.html
+++ b/www/templates/tab-exercisesettings.html
@@ -1,31 +1,39 @@
 <ion-view view-title="{{exercise.name}} Settings" hide-back-button="false">
     <ion-content>
-        <ul class="list">
-            <li class="item item-checkbox">
-                <label class="checkbox">
-                    <input ng-model="exercise.enabled" type="checkbox" value="exercise.enabled"
-                           ng-change="updateSettings(exercise.name,exercise)">
-                </label>
-                Enabled
-            </li>
-        </ul>
+        <div class="row">
+            <div class="col">
+                <ul class="list">
+                    <li class="item item-checkbox">
+                        <label class="checkbox">
+                            <input ng-model="exercise.enabled" type="checkbox" value="exercise.enabled"
+                                   ng-change="updateSettings(exercise.name,exercise)">
+                        </label>
+                        Enabled
+                    </li>
+                </ul>
+            </div>
+        </div>
 
-        <div ng-if="exercise.type === 'category' ">
 
-            <label class="item item-input item-select">
-                <div class="input-label">
-                    Levels
+        <div class="row">
+            <div class="col">
+                <div ng-if="exercise.type === 'category' ">
+                    <label class="item item-input item-select">
+                        <div class="input-label">
+                            Levels
+                        </div>
+                        <select ng-model="exercise.activeLevel" type="select"
+                                ng-change="updateActiveLevel(exercise.name, exercise.activeLevel)"
+                                >
+                            <option ng-repeat="item in exercise.levels"
+                                    value="{{item.level}}"
+                                    ng-selected="{{item.level == exercise.activeLevel}}"
+                                    >{{item.name}}
+                            </option>
+                        </select>
+                    </label>
                 </div>
-                <select ng-model="exercise.activeLevel" type="select"
-                        ng-change="updateActiveLevel(exercise.name, exercise.activeLevel)"
-                        >
-                    <option ng-repeat="item in exercise.levels" value="{{item.level}}">{{item.name}}</option>
-                </select>
-            </label>
-
+            </div>
         </div>
-
-        </div>
-
     </ion-content>
 </ion-view>
