Fix crash when changing exercise settings from routine

--- a/www/templates/tab-exercisesettings.html
+++ b/www/templates/tab-exercisesettings.html
@@ -18,7 +18,7 @@
         <div class="row">
             <div class="col">
                 <div ng-if="exercise.type === 'category' ">
-                    <label class="item item-input item-select">
+                    <div class="item item-input item-select">
                         <div class="input-label">
                             Levels
                         </div>
@@ -31,7 +31,7 @@
                                     >{{item.name}}
                             </option>
                         </select>
-                    </label>
+                    </div>
                 </div>
             </div>
         </div>
