--- a/www/templates/tab-settings.html
+++ b/www/templates/tab-settings.html
@@ -7,7 +7,7 @@
                     <li class="item item-{{setting.type}}" ng-repeat="setting in settings track by $index">
                         <label class="{{setting.type}}">
                             <input ng-model="setting.value" type="{{setting.type}}" value="setting.value"
-                                   ng-change="updateSettings(setting.key,setting)">
+                                   ng-change="updateSettings(setting.key,setting)" />
                         </label>
                         {{setting.name}}
                     </li>
