Fix label description

--- a/www/templates/tab-settings.html
+++ b/www/templates/tab-settings.html
@@ -14,7 +14,7 @@
                         </div>
                         <div ng-if="setting.type == 'select'">
                             <div class="input-label">
-                                Levels
+                                Orientation
                             </div>
                             <select ng-model="setting.value" type="select"
                                     ng-change="updateSettings(setting.key, setting)">
